--- a/index.html
+++ b/index.html
@@ -58,9 +58,19 @@
       <div class="container h-100">
         <div class="row h-100">
             <div class="col-lg-5 my-auto">
-                <div class="device-container">
-                  <img src="img/image-capa.png" class="img-capa" alt="">
+              <div class="device-mockup iphone6_plus portrait white">
+                <div class="device">
+                  <div class="screen">
+                    <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
+                    <video class="img-fluid" loop muted autoplay>
+                      <source src="img/ScreenRecording.MP4" type="video/mp4">
+                    </video>
+                  </div>
+                  <div class="button">
+                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+                  </div>
                 </div>
+              </div>
               </div>
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
