--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
               <a class="nav-link js-scroll-trigger" href="#download">Download</a>
             </li>-->
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#features">Features</a>
+              <a class="nav-link js-scroll-trigger" href="#features">Saiba Mais</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="#contact">Contato</a>
             </li>
           </ul>
         </div>
@@ -156,8 +156,7 @@
 
     <section class="contact" id="contact">
       <div class="container">
-        <h2>
-          Follow us on facebook!</h2>
+        <h2>Nos acompanhe no Facebook</h2>
         <ul class="list-inline list-social">
           <li class="list-inline-item social-facebook">
             <a href="https://www.facebook.com/CrafitApp">
